# fermax-blue-hass

./: .coverage  .gitignore  .vulture_whitelist.py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  Makefile  README.md  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  tests.yml
.playwright-mcp/: page-2026-04-05T14-02-42-873Z.yml
blueprints/: fermax_cast_doorbell.yaml  fermax_dashboard_card.yaml  fermax_doorbell_notification.yaml
custom_components/fermax_blue/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  icons.json  lock.py  manifest.json  media_source.py  notification.py  number.py  select.py  sensor.py  streaming.py  strings.json  switch.py
custom_components/fermax_blue/translations/: ar.json  de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt.json  tr.json
docs/superpowers/plans/: 2026-04-05-feature-parity.md
docs/superpowers/specs/: 2026-04-05-feature-parity-design.md
scripts/: cli.py  extract_credentials.py  pre-push.sh  test_camera.py  test_streaming.py
tests/: conftest.py  test_api.py  test_api_new.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_extract_credentials.py  test_media_source.py  test_notification.py  test_streaming.py
