[project]
name = "fermax-blue-hass"
version = "0.9.0"
description = "Home Assistant integration for Fermax Blue intercoms"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:josepy",
    "ignore::DeprecationWarning:acme",
    "ignore::DeprecationWarning:homeassistant",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
external = ["V"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components/fermax_blue"]

[tool.coverage.run]
source = ["custom_components/fermax_blue"]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
